<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/panelInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:splitMotionEvents="false"
    tools:context=".ActivityHost" >

    <br.com.siva.pinkmusic.ui.BgListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="1200dp"
        android:layout_weight="0.27"
        android:nextFocusForward="@+id/btnAdd" >

    </br.com.siva.pinkmusic.ui.BgListView>

    <LinearLayout
        android:id="@+id/panelTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:splitMotionEvents="false" >
       

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:nextFocusDown="@+id/btnPrev"
            android:nextFocusForward="@+id/btnPrev"
            android:nextFocusLeft="@+id/list"
            android:nextFocusRight="@+id/btnPrev"
            android:nextFocusUp="@+id/list"
            android:gravity="center"
            android:padding="10dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/nothing_playing" />

        <TextView
            android:id="@+id/lblMsgSelMove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingBottom="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="2dp"
            android:paddingTop="2dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/msg_sel"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/panelControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:splitMotionEvents="false" >
            
             
        <br.com.siva.pinkmusic.ui.BgButton
                android:id="@+id/btnMoreInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/information"
                android:nextFocusDown="@+id/list"
                android:nextFocusForward="@+id/btnMoveSel"
                android:nextFocusLeft="@+id/btnCancelSel"
                android:nextFocusRight="@+id/btnMoveSel"
                android:nextFocusUp="@+id/list"/>

            <br.com.siva.pinkmusic.ui.BgButton
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/add_songs"
                android:nextFocusDown="@+id/barVolume"
                android:nextFocusForward="@+id/btnPrev"
                android:nextFocusLeft="@+id/list"
                android:nextFocusRight="@+id/btnPrev"
                android:nextFocusUp="@+id/list" />

            <br.com.siva.pinkmusic.ui.BgButton
                android:id="@+id/btnPrev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_toLeftOf="@+id/btnPlay"
                android:contentDescription="@string/previous"
                android:nextFocusDown="@+id/barVolume"
                android:nextFocusForward="@+id/btnPlay"
                android:nextFocusLeft="@+id/btnAdd"
                android:nextFocusRight="@+id/btnPlay"
                android:nextFocusUp="@+id/list" />

            <br.com.siva.pinkmusic.ui.BgButton
                android:id="@+id/btnPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/play"
                android:nextFocusDown="@+id/barVolume"
                android:nextFocusForward="@+id/btnNext"
                android:nextFocusLeft="@+id/btnPrev"
                android:nextFocusRight="@+id/btnNext"
                android:nextFocusUp="@+id/list" 
                android:gravity="bottom"/>

            <br.com.siva.pinkmusic.ui.BgButton
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/btnPlay"
                android:contentDescription="@string/next"
                android:nextFocusDown="@+id/barVolume"
                android:nextFocusForward="@+id/btnMenu"
                android:nextFocusLeft="@+id/btnPlay"
                android:nextFocusRight="@+id/btnMenu"
                android:nextFocusUp="@+id/list" />

            <br.com.siva.pinkmusic.ui.BgButton
                android:id="@+id/btnMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/menu"
                android:nextFocusDown="@+id/barVolume"
                android:nextFocusForward="@+id/barVolume"
                android:nextFocusLeft="@+id/btnNext"
                android:nextFocusRight="@+id/barVolume"
                android:nextFocusUp="@+id/list" />

            

        </RelativeLayout>

        <LinearLayout 
            android:id="@+id/panelSecondary" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content" 
            android:layout_weight="1.19" 
            android:baselineAligned="false" 
            android:focusable="false" 
            android:measureWithLargestChild="false" 
            android:orientation="horizontal" 
            android:splitMotionEvents="false" 
            android:transitionGroup="false">

                <br.com.siva.pinkmusic.ui.BgSeekBar 
                    android:id="@+id/barSeek" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="16dp" 
                    android:layout_marginRight="16dp" 
                    android:layout_weight="1" 
                    android:nextFocusDown="@+id/list" 
                    android:nextFocusForward="@+id/btnPlay" 
                    android:nextFocusUp="@+id/btnPrev" />

                <br.com.siva.pinkmusic.ui.BgSeekBar 
                    android:id="@+id/barVolume" 
                    android:layout_width="0dp" 
                    android:layout_height="wrap_content" 
                    android:layout_marginRight="16dp" 
                    android:layout_weight="1" 
                    android:nextFocusDown="@+id/list" 
                    android:nextFocusForward="@+id/list" 
                    android:nextFocusLeft="@+id/btnMenu" 
                    android:nextFocusRight="@+id/list" 
                    android:nextFocusUp="@+id/btnMenu" />

                <br.com.siva.pinkmusic.ui.BgButton android:id="@+id/btnVolume" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8dp" android:layout_weight="1" android:contentDescription="@string/volume" android:nextFocusDown="@+id/list" android:nextFocusForward="@+id/list" android:nextFocusLeft="@+id/btnMenu" android:nextFocusRight="@+id/list" android:nextFocusUp="@+id/btnMenu" android:visibility="gone" />
            </LinearLayout><RelativeLayout
            android:id="@+id/panelSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:splitMotionEvents="false"
            android:visibility="gone" >

            <br.com.siva.pinkmusic.ui.BgButton
                android:id="@+id/btnCancelSel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:nextFocusDown="@+id/list"
                android:nextFocusForward="@+id/btnMoveSel"
                android:nextFocusLeft="@+id/list"
                android:nextFocusRight="@+id/btnMoveSel"
                android:nextFocusUp="@+id/list"
                android:text="@string/cancel" />

            <br.com.siva.pinkmusic.ui.BgButton
                android:id="@+id/btnMoveSel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/btnCancelSel"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/btnRemoveSel"
                android:contentDescription="@string/move"
                android:nextFocusDown="@+id/list"
                android:nextFocusForward="@+id/btnRemoveSel"
                android:nextFocusLeft="@+id/btnCancelSel"
                android:nextFocusRight="@+id/btnRemoveSel"
                android:nextFocusUp="@+id/list" />

            <br.com.siva.pinkmusic.ui.BgButton
                android:id="@+id/btnRemoveSel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/btnCancelSel"
                android:contentDescription="@string/remove"
                android:nextFocusDown="@+id/list"
                android:nextFocusForward="@+id/list"
                android:nextFocusLeft="@+id/btnMoveSel"
                android:nextFocusRight="@+id/list"
                android:nextFocusUp="@+id/list" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>